[project]
name = "meu-novo-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Renato Neves Silva",email = "paulo2renato88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
